# NetSnip

./: .gitignore  Entitlements.plist  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  index.html  install-rust.sh  netsnip-sudo.txt  package-lock.json  package.json  setup-sudo.sh  setup.sh  start.sh  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: device.rs  mod.rs  network.rs  settings.rs
src-tauri/src/modules/: arp_controller.rs  bandwidth.rs  database.rs  mod.rs  network_stats.rs  packet_monitor.rs  scanner.rs  vendor.rs
src-tauri/src/utils/: fingerprint.rs  mac_vendor.rs  mod.rs  safety.rs
src/components/Dashboard/: Dashboard.tsx
src/components/DeviceCard/: DeviceCard.tsx
src/components/DeviceList/: DeviceList.tsx
src/components/common/: FilterDropdown.tsx  Header.tsx  NotificationModal.tsx  SettingsMenu.tsx
src/hooks/: useClickOutside.ts  useDebounce.ts  useNotification.tsx
src/lib/: tauri.ts
src/stores/: networkStore.ts
src/styles/: globals.css
src/tests/: app.test.ts
src/types/: global.d.ts
src/utils/: memoize.ts
