[package]
name = "netsnip"
version = "1.0.0"
description = "Modern network management tool for macOS"
authors = ["NetSnip Team"]
edition = "2021"

[dependencies]
tauri = { version = "2.2", features = ["macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pnet = "0.36"
pnet_datalink = "0.36"
pnet_packet = "0.36"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
ipnetwork = "0.20"
mac_address = "1.1"
dns-lookup = "2.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"

[dependencies.tauri-plugin-shell]
version = "2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "netsnip"
path = "src/main.rs"